--- a/src/views/about.hbs
+++ b/src/views/about.hbs
@@ -1,6 +1,21 @@
-<section class="card">
+
+<section class="card shadow ">
     <div class="card-body">
-        <h3>About</h3>
-        <p>no se que poner en el abouts xd</p>
+        <h3 class="text-success font-weight-bold">Sobre nuestro servicio de Tickets</h3>
+        <hr class="m-3">
+        <p>Somos un proveedor de servicios de Tickets dedicado a simplificar y mejorar la experiencia de gestión de entradas y boletos para eventos. Nuestro objetivo es ofrecer una plataforma fácil de usar y eficiente que permita a los organizadores de eventos y a los asistentes tener una experiencia sin complicaciones.</p>
+        <p>Con nuestro servicio de Tickets, los organizadores pueden crear eventos, establecer precios, vender entradas y administrar el proceso de registro de manera conveniente. Además, los asistentes pueden descubrir eventos, comprar boletos de forma segura y tener acceso rápido y sin problemas a los eventos.</p>
+
+        <p><span class="text-dark font-weight-bold">Te intersa, registrate y prueba nuestros</span> <span class="text-danger font-weight-bold">Services Tickets</span></p>
+        <a href="/user/signup">
+            <button type="button" class="btn btn-outline-danger">Registrarse</button>
+        </a>
+        <hr class="">
+        <p><span class="text-dark font-weight-bold">Ya estas registrado?</span> <span class="text-success font-weight-bold">Estupendo,</span></p>
+        <a href="/user/signin">
+            <button type="button" class="btn btn-outline-success">Iniciar Sesión</button>
+        </a>
+
     </div>
 </section>
+<br>
