--- a/src/views/user/signup.hbs
+++ b/src/views/user/signup.hbs
@@ -2,26 +2,31 @@
     <div class="col-md-4 mx-auto">
         <div class="card">
             <div class="card-body">
-                Account Register
+                <h2 class="mx-auto h2salas" style="width: 180px;">REGISTRAR NUEVO USUARIO</h2>
             </div>
-            <div class="card-body">
+            <img src="https://cdn-icons-png.flaticon.com/512/3200/3200751.png" class="mx-auto d-block m-4 logo">
+            
+            <div class="card-body login-form">
                 <form action="/user/signup" method="POST">
-                    <div class="form-group">
-                        <input type="text" class="form-control" name="name" placeholder="Name" value="{{name}}">
+                    <div class="form-groupDIV">
+                        <input type="text" class="form-controlDIV" name="name" placeholder="Nombre" value="{{name}}">
                     </div>
-                    <div class="form-group">
-                        <input type="email" class="form-control" name="email" placeholder="Email" value="{{email}}">
+                    <div class="form-groupDIV">
+                        <input type="email" class="form-controlDIV" name="email" placeholder="Correo Electronico" value="{{email}}">
                     </div>
-                    <div class="form-group">
-                        <input type="password" class="form-control" name="password" placeholder="Password" value="{{password}}">
+                    <div class="form-groupDIV">
+                        <input type="password" class="form-controlDIV" name="password" placeholder="Contraseña" value="{{password}}">
                     </div>
-                     <div class="form-group">
-                    <input type="password" class="form-control" name="confirm_password" placeholder="Confirm Password" value="{{confirm_password}}">
+                     <div class="form-groupDIV">
+                    <input type="password" class="form-controlDIV" name="confirm_password" placeholder="Confirmar Contraseña" value="{{confirm_password}}">
                 </div>
-                <button class="btn btn-primary btn-block">
-Registrarme
+                <button class="btns ">
+                    Registrarme
                 </button>
                 </form>
+                <p>Ya tienes cuenta?
+                    <a href="/user/signin" class="text-decoration-none" > <span class="text-primary ">Inicia Sesión aqui.</span> </a>
+                </p>
             </div>
         </div>
     </div>
