--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -34,6 +34,7 @@
 
 
 <footer class="footer bg-dark text-light" id="footer">
+  <br>
   <div class="container">
     <div class="row">
       <div class="col-md-4">
@@ -87,8 +88,9 @@
       </div>
     </div>
     <hr>
-    <p class="text-center">&copy; 2023 Nombre de la Empresa. Todos los derechos reservados.</p>
+    <p class="text-center">&copy; 2023 Yerson Cardozo && Kamilo Peña. Todos los derechos reservados-> no robar el proyecto okey</p>
   </div>
+  <br>
 </footer>
 
 
