--- a/src/views/partials/navigations.hbs
+++ b/src/views/partials/navigations.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark navbarNavigations">
   <div class="container">
     <div class="container-fluid">
       <img src="https://estrategia-td.com/wp-content/uploads/2020/06/Captura-de-Pantalla-2020-06-01-a-las-10.09.08-p.-m..png" alt="#" class="rounded-circle p-3 mr-3" width="12%" >
