unos toques finales
quedo melo

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -119,6 +119,17 @@ body:hover{
   color: #50c6c0;
 }
 
+.todoeldiv {
+  background: #ffffff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: background-color 0.5s;
+}
+
+.todoeldiv:hover{
+  background-color: rgb(204, 201, 201);
+}
+
+
 
 
 .header {
