--- a/src/views/ticket/tickets.hbs
+++ b/src/views/ticket/tickets.hbs
@@ -1,7 +1,7 @@
 <div class="row">
     {{#each jk}}
-    <div class="col-md-3">
-        <div class="card">
+    <div class="col-md-3 ">
+        <div class="card todoeldiv">
             <div class="card-body">
                 <h1 class="card-title d-flex justify-content-between aling-items-center palabraticket">
                     Ticket <a href="/tickets/edit/{{_id}}"><i class="fa fa-pencil lapizclass"></i></a>
